<resources>
    <string name="app_name">NOFACE</string>
    <string name="nav_account">Tài khoản</string>
    <string name="nav_profile">Thông tin tài khoản</string>
    <string name="nav_pass">Thay đổi mật khẩu</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_story">Quản lí bài viết</string>
    <string name="nav_category">Chủ đề</string>
    <string name="nav_chat">Trò chuyện</string>
    <string name="nav_open">Open nav drawer</string>
    <string name="nav_close">Close nav drawer</string>

    <!--    profile-->
    <string name="name">Tên cá nhân</string>
    <string name="phone">Số điện thoại</string>
    <string name="email">Email</string>
    <string name="information">Thông tin cá nhân</string>
    <string name="nav_logout">Đăng xuất</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    FB-->
    <string name="facebook_app_id">1278795525969008</string>
    <string name="fb_login_protocol_scheme">fb1278795525969008</string>

</resources>