<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:background="@drawable/custom_bottom_boder"
        android:layout_marginTop="17dp"
        android:paddingLeft="10dp"
        android:id="@+id/ln_name"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight="9"
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_margin="0dp"
            android:layout_width="0sp"
            android:layout_height="match_parent">
            <TextView
                android:textStyle="bold"
                android:text="@string/name"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="16dp"
                android:text="@string/name"
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/custom_bottom_boder"
        android:paddingLeft="10dp"
        android:id="@+id/ln_phone"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight="9"
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_margin="0dp"
            android:layout_width="0sp"
            android:layout_height="match_parent">
            <TextView
                android:textStyle="bold"
                android:text="@string/phone"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="16dp"
                android:text="@string/phone"
                android:id="@+id/txt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/custom_bottom_boder"
        android:paddingLeft="10dp"
        android:id="@+id/ln_email"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight="9"
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_margin="0dp"
            android:layout_width="0sp"
            android:layout_height="match_parent">
            <TextView
                android:textStyle="bold"
                android:text="@string/email"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="16dp"
                android:text="@string/email"
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>




</LinearLayout>